@@ -18,18 +18,36 @@
   /**
    * Utility class for rendering boxes, lists, tabs or other templates. 
    *
-   * @todo Document methods.
    * @author Ivo Jansch <ivo@achievo.org>
    * @package atk
    * @subpackage ui
-   *
    */
   class atkUI
   {
-    var $m_smarty = NULL;  
+    /**
+     * Smarty instance, initialised by constructor
+     * @access private
+     * @var Smarty
+     */ 
+    var $m_smarty = NULL;
+
+    /**
+     * atkTheme instance, initialised by constructor
+     * @access private
+     * @var atkTheme
+     */  
     var $m_theme = NULL;
+
+    /**
+     * Node instance
+     * @access private
+     * @var atkNode
+     */
     var $m_node = NULL;
     
+    /**
+     * atkUi constructor, initialises Smarty and atkTheme instance
+     */
     function atkUI()
     {
       atkimport("atk.ui.atktheme");      
@@ -41,11 +59,22 @@
       atkdebug("Created a new atkUI");            
     }        
     
+    /**
+     * Used to set a node for atkUi to perform actions on (?)
+     * @param atkNode &$node an instance of an atkNode
+     */
     function setNode(&$node)
     {
       $this->m_node = &$node;
     }
     
+    /**
+     * Renders action templates
+     * Currently only the view action is implemented
+     * @param String $action the action for which to render the template
+     * @param array  $vars   the template variables
+     * @return String the rendered template
+     */
     function renderAction($action, $vars)
     {
       // todo.. action specific templates
@@ -60,25 +89,52 @@
       return $this->render($tpl, $vars);
     }      
     
+    /**
+     * Renders a list template
+     * @param String $action not used (deprecated?)
+     * @param array  $vars   the variables with which to parse the list template
+     */
     function renderList($action, $vars)
     {
       return $this->render("list.tpl", $vars);
     }
-    
-    function renderBox($vars)
-    {
-      return $this->render("box.tpl", $vars);
-    }
-    
+
+    /**
+     * Renders top template
+     * Deprecated, use renderBox($vars, "top")
+     * @param array $vars the variables for the template
+     */
     function renderTop($vars)
     {
-      if (file_exists($this->m_theme->tplPath("top.tpl")))
+      atkdebug("Using deprecated renderTop function, please install newer top.php from the atk/skel");
+      return renderBox($vars, "top");
+    }
+    
+    /**
+     * Renders a box with Smarty template. 
+     * Call with a $name variable to provide a
+     * better default than "box.tpl".
+     *
+     * For instance, calling renderBox($smartyvars, "menu")
+     * will make it search for a menu.tpl first and use that
+     * if it's available, otherwise it will just use box.tpl
+     */
+    function renderBox($vars, $name="")
+    {
+      atk_var_dump($name, "<h1>Name</h1>");
+      if (file_exists($this->m_theme->tplPath($name.".tpl")))
       {
-        return $this->render("top.tpl", $vars);
+        return $this->render($name.".tpl", $vars);
       }
       return $this->render("box.tpl", $vars);
     }
-    
+
+    /**
+     * Renders a tabulated template
+     * Registers some scriptcode too when the tabtype is set to dhtml
+     * @param array $vars the variables with which to render the template
+     * @param String the rendered template
+     */
     function renderTabs($vars)
     {      
       if ($this->m_theme->getAttribute("tabtype")=="dhtml")
@@ -90,15 +146,18 @@
         foreach($vars["tabs"] as $tab)
         {
           $tabscript.="tabs[tabs.length] = '".$tab['tab']."';\n";
-        
         }
-        $page->register_scriptcode($tabscript);        
-                
+        $page->register_scriptcode($tabscript);                 
       }
-			
       return $this->render("tabs.tpl", $vars);
     }
     
+    /**
+     * Handler for Smarty rendering.
+     * Uses smarty to render a template.
+     * @param String $tplname the name of the template to render
+     * @param array $vars     the variables with which to render the template
+     */
     function render($tplname, $vars=array())
     { 
       // Backwardscompatibility hack.. g_layout must be initGui'd
@@ -135,7 +194,6 @@
       $this->m_smarty->template_dir = $old;
                        
       return $res;
-      
     }        
     
     /**
@@ -145,6 +203,7 @@
      *
      * @param String $style The filename (without path) of the stylesheet for
      *                      which you want to complete the path.
+     * @return String the path of the style
      */
     function stylePath($style)
     {
@@ -155,34 +214,38 @@
      * This function returns a suitable title text for an action.
      * Example: echo $g_layout->title("employee", "edit"); might return:
      *          'Edit an existing employee'
+     * @param String $module   the module in which to look
+     * @param String $nodetype the nodetype of the action
+     * @param String $action   the action that we are trying to find a title for
+     * @return String the title for the action
      */
     function title($module, $nodetype, $action)
     {
       // first look for specific text.
       $key = 'title_'.$module.'_'.$nodetype.'_'.$action;
-      if ($GLOBALS["txt_".$key]!="")
+      if (atktext($key,$module,"","","",true))
       {
-        return text($key);
+        return atktext($key,$module);
       }
       else
       {
         $key = $module."_".$nodetype;
-        if ($GLOBALS["txt_".$key]!="")
+        if (atktext($key,"","","","","",true))
         {
-          return text($key)." - ".text($action, $nodetype);
+          return atktext($key)." - ".atktext($action, "",$nodetype);
         }
         else
         {
           $key = 'title_'.$nodetype.'_'.$action;
-          if ($GLOBALS["txt_".$key]!="")
+          if (atktext($key,"","","","",true))
           {
-            return text($key);
+            return atktext($key);
           }
           else
           {
             // if no specific text available for this node,
             // generate a generic title
-            return text($nodetype, $module)." - ".text($action, $nodetype);
+            return atktext($nodetype, $module)." - ".atktext($action, $nodetype);
           }
         }
       }
